--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "Carlos Cabarcas",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "path": "^0.12.7",
+    "strong-soap": "^3.5.2"
   }
 }
